--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="120dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
 
         <TableRow>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,12 +56,29 @@
 
         <TableRow>
 
+            <Switch
+                android:id="@+id/safeSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="65dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="65dp"
+                android:clickable="true"
+                android:fontFamily="sans-serif-medium"
+                android:text="Safe Mode"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+        </TableRow>
+
+        <TableRow>
+
             <Button
                 android:id="@+id/signinButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="65dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="65dp"
                 android:onClick="signOnClick"
                 android:text="Sign in" />
