--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -226,7 +226,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="15"
-                        android:inputType="phone" />
+                        android:inputType="text" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 </TableRow>
